for django-bootstrap and use humanity for flickr image could not be load

--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 {% block page_heading %}GTD (Getting Things Done){% endblock %}
-{% block extrahead %}
-<!-- CSS and JavaScript for django-todo -->
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}todo/css/styles.css" />
+{% block extra_head %}
 
-<script src="{{STATIC_URL}}js/ui.datepicker.js" type="text/javascript"></script>
-<script src="{{STATIC_URL}}todo/js/jquery.tablednd_0_5.js" type="text/javascript"></script> 
-<link type="text/css" href="{{STATIC_URL}}js/jquery-ui-1.7.1.custom.css" rel="Stylesheet" />
+
+<!-- CSS and JavaScript for django-todo -->
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}/todo/css/styles.css" />
+
+<script src="{{STATIC_URL}}/js/jquery.ui.datepicker.js" type="text/javascript"></script>
+<script src="{{STATIC_URL}}/todo/js/jquery.tablednd_0_5.js" type="text/javascript"></script> 
+<link type="text/css" href="{{STATIC_URL}}/todo/ui.all.css" rel="Stylesheet" />
+<link type="text/css" href="{{STATIC_URL}}/todo/ui.datepicker.css" rel="Stylesheet" />
 
 <script type="text/javascript" charset="utf-8">
     // thedate.x comes from the edit_task view. If this is a new entry, 
@@ -16,5 +19,9 @@
      });
 
 </script>
+
+
+{% endblock %}
+{% block extrahead %}
 
 {% endblock extrahead %}
